--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test-task",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://viacheslav-zelinskyi.github.io/test-task/",
   "dependencies": {
     "@apollo/client": "^3.3.11",
     "@craco/craco": "^6.1.1",
